# riscv-sim

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  test.txt
include/: instruction.h  lexer.h  pipeline.h  pipelinestage.h
src/: instruction.cpp  lexer.cpp  pipeline.cpp  pipelinestage.cpp
test/: test_2.txt  test_addi_slti.txt  test_branch.txt  test_full.txt  test_irr.txt  test_jal_jalr.txt  test_special.txt  test_store_load.txt
